# containerlab

./: .gitignore  README.md
automation/: CHECKPOINTS.md  README.md  pyproject.toml
automation/issues/: ISSUE-baseline-drift-config-noise.md
automation/src/netlab/: cli.py
automation/src/netlab/adapters/: base.py  containerlab.py
automation/src/netlab/core/: errors.py  logging.py  model.py  registry.py  results.py
automation/src/netlab/drift/: baseline.py  config_drift.py  diff.py
automation/src/netlab/evidence/: cli.py  client.py  gnmi.py  transport_base.py
automation/src/netlab/evidence/collectors/eos/: bgp_oc.py  evpn_cli.py  interfaces_oc.py  running_config_cli.py
automation/src/netlab/evidence/collectors/linux/: host_net.py
automation/src/netlab/intent/: loader.py  schema.py
automation/src/netlab/render/: report_json.py  report_md.py
automation/src/netlab/utils/: hashing.py  yaml.py
automation/src/netlab/validators/: base.py  engine.py
automation/src/netlab/validators/control_plane/: bgp_evpn_up.py  evpn_routes_present.py
automation/src/netlab/validators/dataplane/: l2_isolation.py  rack_subnets.py  vlan10_mesh.py
automation/src/netlab/validators/intent/: anycast_gw.py  esi_lag.py  rack_local_vni.py  vxlan_basics.py
automation/src/netlab/validators/underlay/: bgp_underlay_up.py  interfaces_up.py
automation/tests/: test_cli_parser_evpn.py  test_drift_diff.py  test_intent_loader.py  test_results.py
ceos-2dc-4s4l/: README.md  ceos-2dc-4s4l.clab.yml  ceos-2dc-4s4l.clab.yml.annotations.json
ceos-4s4l/: README.md  ceos-4s4l.clab-.drawio  (+2 more)
(+209 files in other folders)
